<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCategoryActivity">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/themdanhmuc"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:id="@+id/tvThemDanhMuc"
    android:textAlignment="center"
    android:textSize="30sp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvMaDM"
        android:text="@string/madanhmuc"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvThemDanhMuc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/etMaDM"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/etMaDM"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/tvMaDM"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvThemDanhMuc"
        app:layout_constraintBottom_toBottomOf="@+id/tvMaDM"
        android:inputType="number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTen"
        android:text="@string/tendanhmuc"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvMaDM"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/etTen"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/etTen"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/tvTen"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMaDM"
        android:inputType="text"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnThemDanhMuc"
        android:text="@string/btn_them"
        android:backgroundTint ="#1DDE7D"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/etTen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>