<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/inter"
        android:text="@string/title_activity_login"
        android:textColor="#448AFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        android:id="@+id/lnUserName"
        android:layout_marginTop="40dp"
        >

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:autofillHints="username"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:textColorHint="#78909C"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            app:drawableRightCompat="@drawable/ic_baseline_person_24" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lnUserName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/lnPassword"
        >

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:autofillHints=""
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="#78909C"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            app:drawableRightCompat="@drawable/ic_baseline_lock_24" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#1DDE7D"
        android:text="@string/login_btn"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnPassword"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>